# nxontology-ml

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yaml
data/: .gitignore  efo_otar_slim_v3.43.0_rs_classification.tsv  efo_otar_slim_v3.57.0_precisions.tsv
experimentation/: Catboost_Experiments.ipynb  Experiments_Analysis.ipynb  Feature_Importance.ipynb  GPT-4_Experiments.ipynb  embeddings_warmup.py  export_model_predictions.py  gpt_tags_warmup.py  metadata_helpers.py  model_runner.py  model_utils.py
experimentation/tests/: embeddings_warmup_test.py  export_model_predictions_test.py  gpt_tags_warmup_test.py  metadata_helpers_test.py  model_runner_test.py
experimentation/tests/test_resources/20230831_195414_mae/fold_0/: catboost_training.json  learn_error.tsv  metadata.json  test_error.tsv  time_left.tsv
experimentation/tests/test_resources/20230831_195414_mae/fold_0/learn/: events.out.tfevents
experimentation/tests/test_resources/20230831_195414_mae/fold_0/test/: events.out.tfevents
experimentation/tests/test_resources/20230831_195414_mae/fold_1/: catboost_training.json  learn_error.tsv  metadata.json  test_error.tsv  time_left.tsv
experimentation/tests/test_resources/20230831_195414_mae/fold_1/learn/: events.out.tfevents
experimentation/tests/test_resources/20230831_195414_mae/fold_1/test/: events.out.tfevents
nxontology_ml/: commands.py  data.py  efo.py  features.py  model.py  pickle_utils.py  sklearn_transformer.py  utils.py
nxontology_ml/gpt_tagger/: README.md  __init__.py  _cache.py  _chat_completion_middleware.py  _features.py  _gpt_tagger.py  _models.py  _openai_models.py  _tiktoken_batcher.py  _utils.py
nxontology_ml/gpt_tagger/tests/: _cache_test.py  _chat_completion_middleware_test.py  _features_test.py  _gpt_tagger_test.py  _integration_test.py  _tiktoken_batcher_test.py  _utils.py  _utils_test.py  conftest.py
nxontology_ml/gpt_tagger/tests/test_resources/: mismatch_payload.json  mismatch_resp.json  precision_payload.json  precision_resp.json  precision_v1.txt
nxontology_ml/model/: config.py  formatter.py  predict.py  train.py
nxontology_ml/model/tests/: formatter_test.py  predict_test.py  train_test.py
nxontology_ml/tests/: commands_test.py  data_test.py  efo_test.py  features_test.py  model_test.py  pickle_utils_test.py  sklearn_transformer_test.py  utils.py  utils_test.py
nxontology_ml/tests/test_resources/: embeddings_cache.ldb  metal_nxo_features.json  sampled_efo_otar_slim.json  sampled_efo_otar_slim_features.json  subsets_features.json
nxontology_ml/text_embeddings/: embeddings_model.py  faiss_helpers.py  knn_embeddings_transformer.py  text_embeddings_transformer.py
nxontology_ml/text_embeddings/tests/: conftest.py  embeddings_model_test.py  knn_embeddings_transformer_test.py  text_embeddings_transformer_test.py
nxontology_ml/text_embeddings/tests/test_resources/: michiyasunaga_BioLinkBERT_base.ldb  text_embeddings_full.json  text_embeddings_knn.json  text_embeddings_lda.json  text_embeddings_pca.json
prompts/: precision_v1.txt  rav_cot_precision_v1.txt
tests/: efo_test.py  features_test.py  utils.py
tests/gpt_tagger/: _cache_test.py  _chat_completion_middleware_test.py  _gpt_tagger_test.py  _integration_test.py  _tiktoken_batcher_test.py  _utils.py  _utils_test.py
tests/test_resources/: metal_nxo_features.json  sampled_efo_otar_slim_features.tsv
