[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nxontology_ml"
version = "0.0.0"
description = "Machine learning to classify ontology nodes."
authors = ["Related Sciences Data Team"]
readme = "README.md"
repository = "https://github.com/related-sciences/nxontology-ml"
license = "Apache-2.0"

[tool.poetry.scripts]
nxontology_ml = "nxontology_ml.commands:cli"

# https://python-poetry.org/docs/versions/
[tool.poetry.dependencies]
bioregistry = "^0.8.3"
fire = "^0.5.0"
ipykernel = "^6.24.0"
jupyter = "^1.0.0"
nbconvert = "^6.2.0"
notebook = "^6.4.4"
numpy = "^1.25.1"
# nxontology = "^0.5.0"
nxontology = { git = "https://github.com/related-sciences/nxontology.git", rev = "c503f1cf19aefbf6bc683605a850429466b3bed5" }
oaklib = "^0.5.12"
pandas = "^2.0.3"
python = "^3.10"

[tool.poetry.dev-dependencies]
pre-commit = "^3.3.3"
pytest = "^7.4.0"

[tool.ruff]
target-version = "py310"
ignore = [
    "E501",  # line-too-long (black should handle)
]
line-length = 88
select = [
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "C90",  # mccabe
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycode warnings
]

[tool.mypy]
python_version = "3.10"
strict = true
pretty = true
show_error_context = true

# https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
[[tool.mypy.overrides]]
module = [
    "networkx.*",
]
ignore_missing_imports = true
